fix background, add executive board section

--- a/src/components/BannerCard.html
+++ b/src/components/BannerCard.html
@@ -20,7 +20,7 @@
       var(--primary-bg-2) 82%
     );
     border: 0.6rem solid var(--primary-bg-2);
-    box-shadow: 0 0 0 0.4rem #fff, var(--grey-shadow) 0.5rem 0.5rem 2rem 0.5rem;
+    box-shadow: 0 0 0 0.4rem #fff, var(--card-shadow);
     transform-origin: 25% 100%;
   }
   img {
