--- a/public/global-styles.css
+++ b/public/global-styles.css
@@ -6,15 +6,62 @@
 html {
   font-size: 16px;
   font-family: open-sans, sans-serif;
+  color: var(--grey-1);
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 2rem;
+  margin-bottom: 0;
   font-family: p22-underground;
 }
 
 body {
   margin: 0;
+  background: var(--grey-9);
+}
+
+header {
+  font-family: p22-underground;
+  font-weight: 600;
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+header:before,
+header:after {
+  content: '•';
+  color: var(--primary);
+  padding: 0.7rem;
+  padding-top: 0rem;
+}
+
+p {
+  font-size: 1.2rem;
+  line-height: 2rem;
+}
+
+section {
+  margin: auto;
+  margin-bottom: 10rem;
+  max-width: 60rem;
+}
+
+a {
+  text-decoration: underline;
+  text-decoration-style: dotted;
+  text-decoration-color: var(--primary);
+  -webkit-text-decoration-color: var(--primary);
+}
+
+a:hover {
+  color: var(--primary);
+  transition: color 0.1s;
 }
 
 :root {
@@ -23,5 +70,8 @@ body {
   --primary-bg-2: hsl(227, 47%, 21%);
   --grey-1: hsl(0, 0%, 10%);
   --grey-shadow: hsla(0, 0%, 10%, 0.3);
-  --grey-9: hsl(0, 0%, 95%);
+  --grey-9: hsl(0, 0%, 98%);
+  --primary-grey-5: hsl(227, 22%, 41%);
+  --primary-grey-9: hsl(227, 21%, 90%);
+  --card-shadow: var(--grey-shadow) 0.5rem 0.5rem 2rem 0.5rem;
 }
