--- a/public/global-styles.css
+++ b/public/global-styles.css
@@ -7,6 +7,7 @@ html {
   font-size: 16px;
   font-family: open-sans, sans-serif;
   color: var(--grey-1);
+  scroll-behavior: smooth;
 }
 
 h1 {
@@ -48,7 +49,7 @@ p {
 
 section {
   margin: auto;
-  margin-bottom: 10rem;
+  padding-top: 10rem;
   max-width: 60rem;
 }
 
@@ -56,7 +57,6 @@ a:link,
 a:visited {
   color: var(--grey-9);
   text-decoration: underline;
-  text-decoration-style: dotted;
   text-decoration-color: var(--primary);
   -webkit-text-decoration-color: var(--primary);
 }
@@ -75,6 +75,7 @@ a:hover {
   --grey-7: hsl(0, 0%, 70%);
   --grey-9: hsl(0, 0%, 98%);
   --primary-grey-5: hsl(227, 22%, 41%);
+  --primary-grey-7: hsl(227, 22%, 70%);
   --primary-grey-9: hsl(227, 21%, 90%);
   --card-shadow: var(--grey-shadow) 0.5rem 0.5rem 2rem 0.5rem;
 }
