--- a/public/global-styles.css
+++ b/public/global-styles.css
@@ -79,4 +79,5 @@ a:hover {
   --primary-grey-7: hsl(227, 22%, 70%);
   --primary-grey-9: hsl(227, 21%, 90%);
   --card-shadow: var(--grey-shadow) 0.5rem 0.5rem 2rem 0.5rem;
+  --mobile-width: 45rem;
 }
