--- a/public/global-styles.css
+++ b/public/global-styles.css
@@ -79,5 +79,6 @@ a:hover {
   --primary-grey-7: hsl(227, 22%, 70%);
   --primary-grey-9: hsl(227, 21%, 90%);
   --card-shadow: var(--grey-shadow) 0.5rem 0.5rem 2rem 0.5rem;
+  --dark-overlay: hsla(227, 40%, 12%, 0.8);
   --mobile-width: 45rem;
 }
