fix getting involved, add footer, add marketing team

--- a/public/global-styles.css
+++ b/public/global-styles.css
@@ -77,12 +77,16 @@ a:hover {
   --primary: hsl(51, 100%, 50%);
   --primary-bg-1: hsl(227, 40%, 9%);
   --primary-bg-2: hsl(227, 47%, 17%);
+  --primary-bg-3: hsl(229, 56%, 24%);
+  --primary-gold: hsl(50, 100%, 91%);
+  --primary-gold-muted: hsl(50, 30%, 75%);
   --grey-1: hsl(0, 0%, 10%);
   --grey-shadow: hsla(0, 0%, 10%, 0.3);
   --grey-7: hsl(0, 0%, 70%);
   --grey-9: hsl(0, 0%, 98%);
   --primary-grey-5: hsl(227, 22%, 41%);
-  --primary-grey-7: hsl(227, 22%, 70%);
+  --primary-grey-7: hsl(229, 80%, 84%);
+  --primary-grey-8: hsl(229, 50%, 86%);
   --primary-grey-9: hsl(227, 21%, 90%);
   --card-shadow: var(--grey-shadow) 0.5rem 0.5rem 2rem 0.5rem;
   --dark-overlay: hsla(227, 40%, 9%, 0.9);
