--- a/src/components/NavBar.html
+++ b/src/components/NavBar.html
@@ -48,7 +48,7 @@
     transition: transform 0.1s;
   }
   .logo {
-    height: 100%;
+    height: 3rem;
     margin-right: auto;
     padding: 0.7rem;
   }
