--- a/src/components/NavBar.html
+++ b/src/components/NavBar.html
@@ -41,14 +41,13 @@
     color: var(--grey-9);
     text-decoration: none;
     padding: 0 1.5rem;
+    transition: color 0.2s;
   }
   a:hover {
     color: var(--primary);
-    transform: scale(1.05);
-    transition: transform 0.1s;
   }
   .logo {
-    height: 3rem;
+    height: 3.5rem;
     margin-right: auto;
     padding: 0.7rem;
   }
@@ -72,7 +71,7 @@
       flex-direction: column;
       justify-content: center;
       background: var(--dark-overlay);
-      transition: bottom 0.2s, opacity 0.3s;
+      transition: bottom 0.3s, opacity 0.4s;
       z-index: -1;
     }
     .link-container.hidden {
@@ -93,6 +92,10 @@
     {
       label: 'Home',
       id: 'home',
+    },
+    {
+      label: 'Teams',
+      id: 'teams',
     },
     {
       label: 'Club Leaders',
