--- a/src/components/NavBar.html
+++ b/src/components/NavBar.html
@@ -24,7 +24,9 @@
     width: 100%;
     height: 3.5rem;
     margin-bottom: -3.5rem;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     background: hsla(227, 40%, 9%, 0.5);
     z-index: 1;
   }
