--- a/src/components/ScrollAnimManager.html
+++ b/src/components/ScrollAnimManager.html
@@ -1,4 +1,38 @@
 <svelte:window on:scroll="{onScroll}" />
+{#if !hasScrolled}
+<div class="scroll-down-indicator"></div>
+{/if}
+
+<style>
+  .scroll-down-indicator {
+    position: fixed;
+    bottom: 1.5rem;
+    left: 0;
+    width: 100%;
+    height: 3rem;
+    background: url('/icons/down-pointer.svg') no-repeat center;
+  }
+  :global(.ready-for-anim) .scroll-down-indicator {
+    animation: float 2s ease-in-out infinite;
+    animation-delay: 1s;
+  }
+  @media (min-width: 45rem) {
+    .scroll-down-indicator {
+      display: none;
+    }
+  }
+  @keyframes float {
+    0% {
+      bottom: 1.5rem;
+    }
+    50% {
+      bottom: 0.5rem;
+    }
+    100% {
+      bottom: 1.5rem;
+    }
+  }
+</style>
 
 <script>
   import { onMount } from 'svelte'
@@ -6,12 +40,15 @@
 
   let waiting = false
   let bodyHeight = 0
+  let hasScrolled = false
 
   onMount(() => {
     bodyHeight = document.body.clientHeight
   })
 
   const onScroll = ({ target }) => {
+    hasScrolled = document.body.scrollTop !== 0
+
     if (waiting) return
     waiting = true
 
