--- a/src/components/NavBar.html
+++ b/src/components/NavBar.html
@@ -1,3 +1,4 @@
+<header>
 <nav>
   <div class="navItems">
     <img class="logo" src="/icons/gsg-logo.svg" alt="GSG logo" />
@@ -18,9 +19,10 @@
   </button>
   </div>
 </nav>
+</header>
 
 <style>
-  nav {
+  header {
     width: 100%;
     height: 3.5rem;
     margin-bottom: -3.5rem;
